[package]
name = "lapis_v2_engine"
version = "0.1.0"
authors = ["Chaoran Chen"]
repository = "https://github.com/cevo-public/LAPIS"
documentation = "https://lapis-docs.readthedocs.io/"
description = "An efficient query engine for genomic sequence data"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
base16ct = "0.1.1"
bincode = "1.3.3"
bio = "0.41"
chrono = "0.4.19"
clap = { version = "3.2.8", features = ["derive"] }
config = "0.13.1"
crossbeam = "0.8"
csv = "1.1"
flate2 = "1.0"
md-5 = "0.10.1"
postgres = { version = "0.19.3", features = ["with-chrono-0_4"] }
postgres-cursor = "0.4.0"
rand = "0.8.5"
regex = "1"
rust-lzma = "0.5"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
zstd = { version = "0.11.2", features = ["experimental"] }
