[package]
name = "lapis_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bio = "0.41"
chrono = "0.4.19"
config = "0.13.1"
croaring = "0.6.1"
crossbeam = "0.8"
csv = "1.1"
postgres = { version = "0.19.3", features = ["with-chrono-0_4"] }
postgres-cursor = "0.4.0"
rand = "0.8.5"
regex = "1"
roaring = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
zstd = { version = "0.11.2", features = ["experimental"] }
